# ai-athletic-coaching

./: .gitignore  README.md  pyproject.toml
slapout_landing_clips/evals/: chest-eval.txt  evals.txt  fall_over-eval.txt  feet_apart-eval.txt  feet_staggered-eval.txt  flawless-eval.txt  heels_touch-eval.txt  heels_touch_and_legs_dont_bend-eval.txt  knees_close-eval.txt  knees_close_and_falls_over-eval.txt  knees_dont_bend-eval.txt  legs_dont_extend-eval.txt
src/: __init__.py  eval_result.py  evaluate_clip.py  grade_evaluation.py  grade_evaluations.py  main.py  test_runner.py
src/evaluation/: __init__.py  eval_result.py  evaluate_clip.py  grade_evaluation.py
src/evaluation/prompts/: grading_prompt.txt  summary_prompt.txt
src/exercise/: __init__.py  criterion.py  exercise.py
src/exercise/exercise_json/: slap_out_landing.json
src/exercise/exercise_sources/slap_out_landing/: criteria.json
src/exercise/prompts/: enhance_criteria.txt
src/google/: __init__.py  genai_evaluator.py  prompt_gemini.py
src/google/mediapipe/: pose_extraction.py
src/google/prompts/: evaluation_prompt.txt
src/keyframing/: extract_keyframes.py
src/ollama/: ollama_prompt.py
src/pose/: __init__.py  generate_key_poses.py  pose.py  pose_node.py
tests/: __init__.py  eval_trial.py  test_runner.py
