[tool.poetry]
name = "ai-athletic-coaching"
version = "0.1.0"
description = "AI Athletic Coaching Project"
authors = ["Abraham Linsenmayer <abe.linsenmayer@gmail.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
ollama = "^0.6.1"
google-genai = "^1.67.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
